--- a/static/templates/home.html
+++ b/static/templates/home.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{%  load staticfiles %}
 {% block jumbotron %}
 {{ request.path }}
 
@@ -10,4 +10,47 @@
 {% endblock %}
 {% block content %}
 	<h1>Main Page</h1>
+
+	<div class="row">
+        <div class="col-sm-4">
+          <h2>Heading</h2>
+          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p><a class="btn btn-default" href="#" role="button">View details »</a></p>
+        </div>
+        
+
+        <div class="col-sm-4">
+        	<img src='{% static 'img/beach.jpg' %}' class='img-responsive'/>
+          
+       </div>
+
+
+        <div class="col-sm-4">
+
+
+       {% if request.user.is_authenticated %}
+       		<h3> Hello, {{  request.user }} </h3>
+
+       {% else %}
+       <form class="login" method="POST" action="{% url 'account_login' %}">
+  		{% csrf_token %}
+  
+
+<div id="div_id_login" class="form-group"><label for="id_login" class="control-label  requiredField">
+				Login<span class="asteriskField">*</span></label><div class="controls "><input autofocus="autofocus" class="textinput textInput form-control" id="id_login" name="login" placeholder="Username or e-mail" type="text"> </div></div><div id="div_id_password" class="form-group"><label for="id_password" class="control-label  requiredField">
+				Password<span class="asteriskField">*</span></label><div class="controls "><input class="textinput textInput form-control" id="id_password" name="password" placeholder="Password" type="password"> </div></div><div class="form-group"><div id="div_id_remember" class="checkbox"><label for="id_remember" class=""><input class="checkboxinput checkbox" id="id_remember" name="remember" type="checkbox">
+                    Remember Me
+
+                </label></div></div>
+
+  <button class="btn btn-default primaryAction" type="submit">Sign In</button>
+  <a class="button btn btn-link secondaryAction" href="{% url 'account_reset_password' %}">Forgot Password?</a>
+    <a class="button btn btn-link secondaryAction" href="{% url 'account_signup' %}">Sign Up</a>
+  
+</form>
+	{% endif %}
+          
+        </div>
+      </div>
+
 {% endblock %}
